fix(list): too tall menus render outside screen on Safari ios with address bar

--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -54,7 +54,7 @@
 }
 
 .mdc-menu {
-    max-height: 80vh; // force tall menus render inside the viewport when menu is at the bottom of the screen
+    max-height: 70vh; // force tall menus render inside the viewport when menu is at the bottom of the screen
 }
 
 .mdc-list {
